--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student in East China Normal University (ECNU).</br>
-My main research interests include image reconstruction and enhancement based on Deep Learning. My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN">Juncheng Li (李俊诚)</a></br>
+My main research interests include image reconstruction and enhancement based on Deep Learning. My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019">ICCV-Workshop 2019 (Oral)</a>.
+        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-Workshop 2019 (Oral)</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first">IET Image Processing</a>.
+        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://accv2018.net/dates/">ACCV 2018</a>.
+        One paper is accepted at <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
     </li>
     <li>
-        We won the thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md">"ChinaMM2018 Image Dehazing Challenge"</a>.
+        We won the thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
-        One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/">ICONIP 2018</a>.
+        One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="https://eccv2018.org/">ECCV 2018</a>.
+        One paper is accepted at <a href="https://eccv2018.org/", target="_blank">ECCV 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://cvpr2018.thecvf.com/">CVPR-Workshop 2018</a>.
+        One paper is accepted at <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-Workshop 2018</a>.
     </li>
     <li>
-        We won the six place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/">"NTIRE 2018 Challenge on Image Dehazing"</a>.
+        We won the six place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
     </li>
 </section>
 
@@ -45,7 +45,7 @@ My main research interests include image reconstruction and enhancement based on
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
-        <a href="paper/ICCVW_2019.pdf">[Paper]</a>
+        <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         [Poster]
         [Code]
         </br>
@@ -57,16 +57,16 @@ My main research interests include image reconstruction and enhancement based on
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
-        <a href="paper/ECCV_2018.pdf">[Paper]</a>
-        <a href="poster/MSRN-poster.pdf">[Poster]</a>
-        <a href="https://github.com/MIVRC/MSRN-PyTorch">[Code]</a>
+        <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
+        <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
     </li>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
-        <a href="paper/CVPRW_2018.pdf">[Paper]</a>
+        <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i>
     </li>
@@ -76,7 +76,7 @@ My main research interests include image reconstruction and enhancement based on
     <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
-        <a href="paper/IET_2018.pdf">[Paper]</a>
+        <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
@@ -84,15 +84,15 @@ My main research interests include image reconstruction and enhancement based on
     </li>
     <li>
         <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
-        <a href="paper/ACCV_2018.pdf">[Paper]</a>
-        <a href="https://github.com/MIVRC/PFFNet-PyTorch">[Code]</a>
+        <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="paper/ICONIP_2018.pdf">[Paper]</a>
+        <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
@@ -113,7 +113,7 @@ My main research interests include image reconstruction and enhancement based on
         I became a reviewer of《IET Signal Processing》</a>in 2019.
     </li>
     <li>
-        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC">MIVRC</a>) for open source image processing projects in 2019.
+        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
         I became a reviewer of《IET Image Processing》</a>in 2018.
@@ -131,10 +131,10 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor at <a href="http://www.cuhk.edu.cn/"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
+        Academic Visitor at <a href="http://www.cuhk.edu.cn/", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
     </li>
     <li>
-        Research Assistant at <a href="http://www.cuhk.edu.cn/">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
+        Research Assistant at <a href="http://www.cuhk.edu.cn/", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
     </li>
 </section>
 
