--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor at <a href="http://www.cuhk.edu.cn/", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
+        Academic Visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
     </li>
     <li>
-        Research Assistant at <a href="http://www.cuhk.edu.cn/", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
+        Research Assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
     </li>
 </section>
 
