--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        We won the 5 place in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (5/1514).
+    </li>
+    <li>
         One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-Workshop 2019 (Oral)</a>.
     </li>
     <li>
