--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ My main research interests include image reconstruction and enhancement based on
         One paper is accepted at <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
     </li>
     <li>
-        We won the thrid place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM2018 Image Dehazing Challenge"</a>.
+        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
         One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
@@ -37,7 +37,10 @@ My main research interests include image reconstruction and enhancement based on
         One paper is accepted at <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-Workshop 2018</a>.
     </li>
     <li>
-        We won the six place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
+        We won the 6 place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
+    </li>
+    <li>
+        We won the 24 place in "JData algorithm competition" (Construction of the prediction model for the purchase intention of high potential users, 24/4240).
     </li>
 </section>
 
