--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Lee</h1>
 
 <p style="font-size: 0.8rem;">
-I am a Ph.D. student in East China Normal University (ECNU).</br>
+I am a Ph.D. student at East China Normal University (ECNU).</br>
 My main research interests include image reconstruction and enhancement based on Deep Learning. My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
