--- a/index.html
+++ b/index.html
@@ -53,16 +53,10 @@ My main research interests include image reconstruction and enhancement based on
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         [Poster]
-        [Code]
+        <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i>
-        @InProceedings{Li_2019_ICCV_Workshops,
-            author = {Li, Juncheng and Yuan, Yiting and Mei, Kangfu and Fang, Faming},
-            title = {Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution},
-            booktitle = {The IEEE International Conference on Computer Vision (ICCV) Workshops},
-            year = {2019}
-            }
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
