--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ My main research interests include image reconstruction and enhancement based on
         We won the 5 place in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (5/1514).
     </li>
     <li>
-        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-Workshop 2019 (Oral)</a>.
+        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 (Oral)</a>.
     </li>
     <li>
         One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing</a>.
@@ -57,6 +57,7 @@ My main research interests include image reconstruction and enhancement based on
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
         <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
