--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ My main research interests include image reconstruction and enhancement based on
         One paper is accepted at <a href="https://eccv2018.org/", target="_blank">ECCV 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-Workshop 2018</a>.
+        One paper is accepted at <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-NTIRE Workshop 2018</a>.
     </li>
     <li>
         We won the 6 place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
@@ -56,7 +56,7 @@ My main research interests include image reconstruction and enhancement based on
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
@@ -75,7 +75,8 @@ My main research interests include image reconstruction and enhancement based on
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
     </li>
 </section>
 
