--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ My main research interests include image reconstruction and enhancement based on
     </li>
 </section>
 
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w&cl=ffffff&w=a"></script>
+
 
 <style>
     .publications li {
