--- a/index.html
+++ b/index.html
@@ -149,7 +149,14 @@ My main research interests include image reconstruction and enhancement based on
     </li>
 </section>
 
+
+<p></p>
+
+
+<div align= "center">
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w&cl=ffffff&w=a"></script>
+</div>
+
 
 
 <style>
