--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ My main research interests include image reconstruction and enhancement based on
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w&cl=ffffff&w=a"></script>
 </div>
 
-<div align= "center"></div>
+<div align= "center">
 <section style="font-size: 0.7rem;" class="publications"></section>
     <h1 style="font-size: 1rem; font-weight: bold;">Statistics from September 11, 2019</h1>
 </section>
