--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge (ICCV-AIM2019)"</a>.
+        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM2019)"</a>.
+    </li>
+    <li>
+        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM2019)"</a>.
     </li>
     <li>
         We won the 5 place in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (5/1514).
