--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ My main research interests include image reconstruction and enhancement based on
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
     </li>
+</section>
+
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Report</h1>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
@@ -86,8 +91,9 @@ My main research interests include image reconstruction and enhancement based on
     </li>
 </section>
 
+
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Publications</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Paper</h1>
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
