--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University (ECNU).</br>
-My main research interests include image reconstruction and enhancement based on Deep Learning. My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My main research interests include image restoration (image super-resolution, image dehazing, image denoising, image demosaicing, and image enhancement) based on deep learning.</br>
+My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
 <p></p>
@@ -27,10 +28,10 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM2019)"</a>.
+        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM2019)"</a>.
+        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
         We won the 5 place in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (5/1514).
@@ -45,7 +46,7 @@ My main research interests include image reconstruction and enhancement based on
         One paper is accepted at <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
     </li>
     <li>
-        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM2018 Image Dehazing Challenge"</a>.
+        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
         One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
@@ -70,13 +71,13 @@ My main research interests include image reconstruction and enhancement based on
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
-        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution.</b> </br>
+        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         [Poster]
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW, Oral), 2019.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
