--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <p></p>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Competition Report</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
@@ -110,7 +110,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <p></p>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Paper</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
