--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        We won the 5 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (5/1514).
+        We won the 5 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
     </li>
     <li>
         One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 (Oral)</a>.
@@ -116,7 +116,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="", target="_blank">[Paper][Poster][Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
