--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
-        <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
+        <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         [Poster]
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
@@ -113,7 +113,9 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
     <li>
         <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
-        <a href="", target="_blank">[Paper][Poster][Code]</a>
+        <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
+        [Poster]
+        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
