--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Lee</h1>
 
 <p style="font-size: 0.8rem;">
-I am a Ph.D. student at East China Normal University (ECNU).</br>
+I am a Ph.D. student at East China Normal University (ECNU). This homepage records the events that occurred during my graduate studies.</br>
 My main research interests include image restoration (image super-resolution, image dehazing, image denoising, image demosaicing, and image enhancement) based on deep learning.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
@@ -40,10 +40,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 (Oral)</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing</a>.
+        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2019</a>.
     </li>
     <li>
         One paper is accepted at <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
+    </li>
+    <li>
+        I won the Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
     </li>
     <li>
         We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
@@ -104,6 +107,14 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
+    </li>
+
+    <li>
+        <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping.</b> </br>
+        <a href="", target="_blank">[Paper]</a>
+        </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
 </section>
 
