--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: true
 ---
 
-<h1 style="font-size: 1rem; font-weight: bold;">Juncheng Lee</h1>
+<h1 style="font-size: 1rem; font-weight: bold;">Juncheng Lee (李俊诚)</h1>
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University (ECNU). This homepage records the events that occurred during my graduate studies.</br>
