--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
+        I became a China Computer Federation member</a>in 2019.
+    </li>
+    <li>
         I became a CVF member</a>in 2019.
     </li>
     <li>
