--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
+        I will go to Nanyang Technological University (NTU) as a project officer in 2019.12.
+    </li>
+    <li>
         Academic Visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
     </li>
     <li>
         Research Assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
+    </li>
+    <li>
+        
     </li>
 </section>
 
@@ -27,6 +33,21 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
+    <li>
+        One paper was submitted to SPL</a>.
+    </li>
+    <li>
+        One paper was submitted to TMM</a>.
+    </li>
+    <li>
+        One paper was submitted to TNNLS</a>.
+    </li>
+    <li>
+        One paper was submitted to TIP</a>.
+    </li>
+    <li>
+        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">ICCV-AIM Workshop 2019</a>.
+    </li>
     <li>
         We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
     </li>
@@ -37,13 +58,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
     </li>
     <li>
-        One paper is accepted at <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 (Oral)</a>.
+        We have 1 paper accepted to <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 <b>(Oral)</b></a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2019</a>.
+        We have 1 paper accepted to <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2019</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
+        We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
     </li>
     <li>
         I won the Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
@@ -52,13 +73,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
-        One paper is accepted at <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
+        We have 1 paper accepted to <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="https://eccv2018.org/", target="_blank">ECCV 2018</a>.
+        We have 1 paper accepted to <a href="https://eccv2018.org/", target="_blank">ECCV 2018</a>.
     </li>
     <li>
-        One paper is accepted at <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-NTIRE Workshop 2018</a>.
+        We have 1 paper accepted to <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-NTIRE Workshop 2018</a>.
     </li>
     <li>
         We won the 6 place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
@@ -161,6 +182,9 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <li>
+        I became a reviewer of《IEEE Signal Processing Letters.》</a>in 2019.
+    </li>
     <li>
         I became a China Computer Federation member in 2019.
     </li>
