--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         I became a reviewer of《IEEE Transactions on Multimedia》</a>in 2019.
     </li>
     <li>
-        I became a reviewer of《IEEE Signal Processing Letters.》</a>in 2019.
+        I became a reviewer of《IEEE Signal Processing Letters》</a>in 2019.
     </li>
     <li>
         I became a China Computer Federation member in 2019.
