--- a/index.html
+++ b/index.html
@@ -46,16 +46,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         One paper was submitted to TIP</a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">ICCV-AIM Workshop 2019</a>.
-    </li>
-    <li>
-        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
-    </li>
-    <li>
-        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
-    </li>
-    <li>
-        We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
+        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 <b>(Oral)</b></a>.
@@ -67,12 +58,6 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
     </li>
     <li>
-        I won the Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
-    </li>
-    <li>
-        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
-    </li>
-    <li>
         We have 1 paper accepted to <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
     </li>
     <li>
@@ -80,6 +65,27 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     </li>
     <li>
         We have 1 paper accepted to <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-NTIRE Workshop 2018</a>.
+    </li>
+</section>
+
+<p></p>
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Awards</h1>
+    <li>
+        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
+    </li>
+    <li>
+        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
+    </li>
+    <li>
+        We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
+    </li>
+    <li>
+        I won the Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
+    </li>
+    <li>
+        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
         We won the 6 place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
