--- a/index.html
+++ b/index.html
@@ -184,18 +184,12 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Social Responsibility</h1>
     <li>
         I became a reviewer of《IEEE Transactions on Multimedia》</a>in 2019.
     </li>
     <li>
         I became a reviewer of《IEEE Signal Processing Letters》</a>in 2019.
-    </li>
-    <li>
-        I became a China Computer Federation member in 2019.
-    </li>
-    <li>
-        I became a CVF member in 2019.
     </li>
     <li>
         I became a reviewer of《IEEE Transactions on Image Processing》</a>in 2019.
@@ -207,13 +201,26 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         I became a reviewer of《IET Signal Processing》</a>in 2019.
     </li>
     <li>
-        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
-    </li>
-    <li>
         I became a reviewer of《IET Image Processing》</a>in 2018.
     </li>
     <li>
         I became a reviewer of《IET Electronics Letters》</a>in 2018.
+    </li>
+</section>
+
+
+<p></p>
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
+    <li>
+        I became a China Computer Federation member in 2019.
+    </li>
+    <li>
+        I became a CVF member in 2019.
+    </li>
+    <li>
+        My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
         I build CLFStudio in 2015, a student studio dedicated to creative project development.
