--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        I awarded the "Student Award"  from the organizer as a grant to attend ICCV 2019.
+    </li>
+    <li>
         One paper was submitted to SPL</a>.
     </li>
     <li>
@@ -100,7 +103,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
-        [Poster]
+        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
