--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <p style="font-size: 0.8rem;">
 I am a Ph.D. student at East China Normal University (ECNU). This homepage records the events that occurred during my graduate studies.</br>
-My main research interests include image restoration (image super-resolution, image dehazing, image denoising, image demosaicing, and image enhancement) based on deep learning.</br>
+My main research interests include image restoration (image super-resolution, image dehazing, image denoising, image demosaicing, image deblurring, and image enhancement) based on deep learning.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
