--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
-        I awarded the "Student Award"  from the organizer as a grant to attend ICCV 2019.
+        Two papers were submitted to CVPR 2020</a>.
     </li>
     <li>
-        One paper was submitted to SPL</a>.
+        I awarded the "Student Award"  from the organizer as a grant to attend ICCV 2019.
     </li>
     <li>
         One paper was submitted to TMM</a>.
